--- a/overrides/main.html
+++ b/overrides/main.html
@@ -5,9 +5,13 @@
   <meta property="og:type" content="webpage" />
   <meta name="twitter:card" content="summary" />
   <meta property="og:url" content="{{ page.canonical_url }}" />
+  <meta property="og:image" content="https://rsdkmodding.com/assets/icon.png" />
+  <meta property="og:image:type" content="image/png" />
 {% if page and page.meta and page.meta.description %}
   <meta property="og:description" content="{{ page.meta.description }}">
 {% elif config.site_description %}
   <meta property="og:description" content="{{ config.site_description }}">
 {% endif %}
+  <meta property="og:image:width" content="512" />
+  <meta property="og:image:height" content="512" />
 {% endblock %}
