--- a/overrides/main.html
+++ b/overrides/main.html
@@ -5,8 +5,8 @@
   <meta property="og:type" content="webpage" />
   <meta name="twitter:card" content="summary" />
   <meta property="og:url" content="{{ page.canonical_url }}" />
-  <meta property="og:image" content="https://rsdkmodding.com/assets/icon.png" />
-  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image" content="https://rsdkmodding.com/assets/favicon.svg" />
+  <meta property="og:image:type" content="image/svg+xml" />
 {% if page and page.meta and page.meta.description %}
   <meta property="og:description" content="{{ page.meta.description }}">
 {% elif config.site_description %}
